# jupyterhub-fancy-profiles

./: .eslintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  binderhub_config.py  dev-requirements.txt  eslint.config.mjs  jupyterhub_config.py  package-lock.json  package.json  pyproject.toml  setup.py  setupTests.js  webpack.config.js
.github/workflows/: checks.yml  docker-build.yaml  release.yaml
jupyterhub_fancy_profiles/: __init__.py
jupyterhub_fancy_profiles/static/: form.js
jupyterhub_fancy_profiles/templates/: form.html
kubespawner_dynamic_building_ui/: __init__.py
kubespawner_dynamic_building_ui/static/: form.js
kubespawner_dynamic_building_ui/templates/: form.html  style.css
src/: CustomSelect.jsx  Form.js  Form.jsx  ImageBuilder.jsx  ImageBuilder.test.js  ImageOption.jsx  ImageSpecifier.jsx  ProfileForm.jsx  ProfileForm.test.js  ProfileOption.jsx  ProfileOptions.jsx  ResourceSelect.jsx  ResourceSelector.jsx  form.css  index.jsx  state.js
src/ImageSelect/: ImageBuilder.jsx  index.jsx
src/components/form/: CustomSelect.jsx  fields.jsx  fields.test.js
src/hooks/: useRefField.js  useRepositoryField.js  useSelectOptions.js
src/utils/: index.js
